Use Docker container database

--- a/GraphQLServer.Api/appsettings.json
+++ b/GraphQLServer.Api/appsettings.json
@@ -13,6 +13,6 @@
     }
   },
   "ConnectionStrings": {
-    "GraphDatabaseConnection": "Server=dev-030760\\SQL2K14DEVELOPER;Database=GraphQL;User Id=hsi;Password=wstinol;MultipleActiveResultSets=true"
+    "GraphDatabaseConnection": "Server=localhost;Database=GraphQL;MultipleActiveResultSets=true"
   }
 }
